Bug 337177 - initial setup dialog defaults to deactivte kwalletd
Summary: initial setup dialog defaults to deactivte kwalletd
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kwallet
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Valentin Rusu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-07 11:54 UTC by Harald Sitter
Modified: 2014-07-07 21:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (54.95 KB, image/png)
2014-07-07 11:54 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-07-07 11:54:00 UTC
the initial setup dialog will default to have kwalletd deactivated entirely which makes the dialog a bit pointless really.
the initial setup should default to kwallet usage.

Reproducible: Always
Comment 1 Harald Sitter 2014-07-07 11:54:13 UTC
Created attachment 87612 [details]
screenshot
Comment 2 Valentin Rusu 2014-07-07 21:05:13 UTC
Git commit e688c99a7217d80326417a96dd222c148df03067 by Valentin Rusu.
Committed on 07/07/2014 at 21:03.
Pushed by vrusu into branch 'master'.

Give the default choice to use the kwallet system

Let the checkbox be initially checked. I'm sure several years ago
asked this checkbox to be initially unchecked :-)

M  +1    -0    src/runtime/kwalletd/kwalletwizard.cpp

http://commits.kde.org/kwallet-framework/e688c99a7217d80326417a96dd222c148df03067