Give the default choice to use the kwallet system

BUG: 337177

Let the checkbox be initially checked. I'm sure several years ago
asked this checkbox to be initially unchecked :-)